Modification des T4 de génération du CORE

--- a/BookStore.CoreLibrary/BookStore.CoreLibrary.csproj
+++ b/BookStore.CoreLibrary/BookStore.CoreLibrary.csproj
@@ -49,6 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Book.cs">
+      <DependentUpon>CoreModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="CoreModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
