Code First Migrations

--- a/BookStore.CoreLibrary/BookStore.CoreLibrary.csproj
+++ b/BookStore.CoreLibrary/BookStore.CoreLibrary.csproj
@@ -67,6 +67,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>CoreModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
